# bugintel-ai-workbench

./: README.md  pyproject.toml
bugintel/: cli.py
docs/: brain-workflow.md  cli-reference.md  feature-reference.md  methodology.md  safety-model.md
tests/: test_brain_chat.py  test_brain_chat_cli.py  test_brain_chat_demo_flow.py  test_brain_chat_demo_flow_cli.py  test_brain_chat_session.py  test_brain_chat_session_next_step.py  test_brain_chat_session_next_step_cli.py  test_brain_chat_session_summary_cli.py  test_brain_state_export.py  test_brain_state_export_cli.py  test_case_summary.py  test_case_summary_cli.py  test_case_timeline.py  test_case_timeline_cli.py  test_research_state_apply.py  test_research_state_apply_cli.py  test_result_evidence.py  test_result_evidence_action_plan_apply_preview.py  test_result_evidence_action_plan_apply_preview_cli.py  test_result_evidence_action_plan_apply_preview_review.py  test_result_evidence_action_plan_apply_preview_review_cli.py  test_result_evidence_case_memory.py  test_result_evidence_case_memory_cli.py  test_result_evidence_case_summary.py  test_result_evidence_case_summary_cli.py  test_result_evidence_chat.py  test_result_evidence_chat_cli.py  test_result_evidence_chat_context.py  test_result_evidence_chat_context_cli.py  test_result_evidence_chat_prompt.py  test_result_evidence_chat_prompt_cli.py  test_result_evidence_chat_provider_dry_run.py  test_result_evidence_chat_provider_dry_run_cli.py  test_result_evidence_chat_provider_gate.py  test_result_evidence_chat_provider_gate_cli.py  test_result_evidence_chat_router.py  (+50 more)
(+46 files in other folders)
