[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackhole-ai-workbench"
version = "0.57.0"
description = "Human-in-the-loop AI-assisted vulnerability discovery and security intelligence workbench."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Siddharth Kathole" }
]
keywords = [
  "cybersecurity",
  "bug bounty",
  "vulnerability research",
  "AI security",
  "web security",
  "API security"
]
dependencies = [
  "httpx>=0.27.0,<1.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
browser = [
  "playwright>=1.40.0"
]

[project.scripts]
bugintel = "bugintel.cli:app"
blackhole = "bugintel.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bugintel*"]
